--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <a href=""><i class="fa-solid fa-envelope"></i></a>
                 </div>
                 <br>
-                <a href="#" download class="btn btn2">Download CV</a>
+                <a href="blob:https://wallpapers.com/0a83e866-b2e1-4732-b2f6-31a065c9749b" download class="btn btn2">Download CV</a>
             </div>
             <br><br>
 
